# DockerScope

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dev.yml  release.yml
demo-container/: Dockerfile  docker-compose.yaml
dockerscope/: __init__.py  cli.py
dockerscope/attack/: attack_graph.py
dockerscope/config/: load_config.py
dockerscope/core/: compose_scanner.py  discovery.py  docker_client.py  reachability.py  risks.py  scorer.py
dockerscope/models/: container.py  host.py  risk.py
docs/: CONTRIBUTING.md  SECURITY_CONCEPTS.md
tests/: conftest.py  test_attack_graph.py  test_basic.py  test_cli.py  test_compose_scanner.py  test_config.py  test_discovery.py  test_network.py  test_reachability.py  test_risks.py  test_risks_comprehensive.py  test_scorer.py
